@@ -1,4 +1,4 @@
-VERSION=0.77.1-050817
+VERSION=0.77.1-050818
 THISDIR=branch_0
 HOME=.
 
